A day of work that started with finishing the autodocumentation of dmatrix.c; getting Easel to compile again; popping sqio.c back to the top of my work stack; then bringing alphabet.{ch} into Easel. Stopped in the middle of work on alphabet.c, which is going to improve on previous implementations (such as HMMER) by no longer being global variables, necessarily.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/easel@9 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -1,8 +1,12 @@
 
 
 pdf:
+	make autodoc
 	pdflatex main
 	pdflatex main
+
+autodoc:
+	./autodoc_functions ../dmatrix.c > autotext/dmatrix_functions.tex
 
 clean:
 	\rm *~ main.log main.out main.pdf
