Work for the last two weeks in Spain, over Christmas: faster FSA-based FASTA file parser in sqio.c (STL8/p148); .tex files starting to appear for each module (STL8/p149); more consistent APIs being enforced (STL8/p150); redesign of getopts in progress; implementation of regexp.c started, for getopts.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/easel@10 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -1,4 +1,23 @@
+# Each module should have .tex documentation of its API,
+# in addition to the .c and .h files. The list of modules
+# that actually comply follows:
+#
+APITEX =  alphabet\
+	  easel\
+	  random\
+	  sqio\
+	  stack
 
+
+# Each module should be able to be autodocumented, converting
+# its function headers to a .tex appendix file. The list of
+# modules that actually comply follows:
+#
+AUTOTEX = alphabet\
+	  dmatrix\
+	  random\
+	  sqio\
+	  stack
 
 pdf:
 	make autodoc
@@ -6,7 +25,10 @@ pdf:
 	pdflatex main
 
 autodoc:
-	./autodoc_functions ../dmatrix.c > autotext/dmatrix_functions.tex
+	for module in ${AUTOTEX}; do\
+	   ./autodoc_functions ../$$module.c > autotext/$${module}_functions.tex;\
+	done
 
 clean:
-	\rm *~ main.log main.out main.pdf
+	-rm *~ main.log main.out main.pdf
+	-rm autotext/*.tex
