regexp module essentially complete; 3 examples and testdriver implemented; regexp.c autodoc's; regexp.tex API documentation written.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/easel@13 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -5,6 +5,7 @@
 APITEX =  alphabet\
 	  easel\
 	  random\
+	  regexp\
 	  sqio\
 	  stack
 
@@ -16,6 +17,7 @@ APITEX =  alphabet\
 AUTOTEX = alphabet\
 	  dmatrix\
 	  random\
+	  regexp\
 	  sqio\
 	  stack
 
@@ -30,5 +32,5 @@ autodoc:
 	done
 
 clean:
-	-rm *~ main.log main.out main.pdf
+	-rm *~ main.log main.out main.pdf main.aux main.toc
 	-rm autotext/*.tex
