getopts module complete (?). getopts.tex API documentation done; autodoc of functions is ok; test driver written & passes.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/easel@20 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -4,6 +4,7 @@
 #
 APITEX =  alphabet\
 	  easel\
+	  getopts\
 	  random\
 	  regexp\
 	  sqio\
@@ -16,6 +17,7 @@ APITEX =  alphabet\
 #
 AUTOTEX = alphabet\
 	  dmatrix\
+	  getopts\
 	  random\
 	  regexp\
 	  sqio\
