In process of documenting msa, keyhash.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/easel@32 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -5,6 +5,8 @@
 APITEX =  alphabet\
 	  easel\
 	  getopts\
+	  keyhash\
+	  msa\
 	  random\
 	  regexp\
 	  sqio\
@@ -18,6 +20,8 @@ APITEX =  alphabet\
 AUTOTEX = alphabet\
 	  dmatrix\
 	  getopts\
+	  keyhash\
+	  msa\
 	  random\
 	  regexp\
 	  sqio\
