This is a partial commit. Revision to augmentation, filenaming, include conventions in progress. xref STL9/p.39
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/easel@34 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -70,6 +70,7 @@ symlinks:
 clean:
 	-rm -f ${OBJS} libeasel.a
 	-rm -f *~ TAGS
+	-rm -f core.[0-9]*
 	-rm -f config.log config.status
 	-rm -f example test
 
