Added sreformat to the miniapps.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/easel@37 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -26,7 +26,7 @@ PROGS = compstruct
 #
 all: 	$(PROGS) 
 
-${PROGS}: @EXEC_DEPENDENCY@
+${PROGS}: @EXEC_DEPENDENCY@  ../libeasel.a
 	${CC} ${CFLAGS} ${DEFS} ${LDFLAGS} ${ESLLIBDIR} -o $@ $@.o ${OBJS} ${LIBS}
 
 .c.o:
