vectorops updated and included.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/easel@38 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -19,8 +19,8 @@ ESLINCDIR = -I..
 
 ## list of the miniapps to compile.
 #
-PROGS = compstruct
-
+PROGS = compstruct\
+	sreformat
 
 ## Targets defining how to make miniapp executables.
 #
@@ -31,8 +31,6 @@ ${PROGS}: @EXEC_DEPENDENCY@  ../libeasel.a
 
 .c.o:
 	${CC} ${CFLAGS} ${DEFS} ${ESLINCDIR} -c $<
-
-
 
 clean:
 	-rm *.o *~
