xref STL9/52 vectorops, fileparser incorporation
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/easel@41 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -3,7 +3,8 @@
 # SVN $Id$
 
 CC      = @CC@
-CFLAGS  = @CFLAGS@
+#CFLAGS  = @CFLAGS@
+CFLAGS  = -g -Wall  # for now, while debugging/developing
 AR      = @AR@ rcv
 LN      = ln
 RANLIB  = @RANLIB@
@@ -63,7 +64,6 @@ distclean:
 
 tags:
 	etags *.[ch] Makefile
-
 
 
 # magic SVN for setting keyword ID replacement on a new module foo:
