Incorporating dirichlet. Still not quite complete - not tested yet, and it lacks test and example code.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@52 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/easel.h.in
+++ b/easel.h.in
@@ -114,6 +114,13 @@
 #define ESL_DASSERT3(x)
 #endif
 
+/* File parsers all contain a fixed length "errbuf" for failure
+ * diagnostics. 
+ */
+#define eslERRBUFSIZE 128
+
+
+
 typedef void (*esl_error_handler_f)(int code, char *file, int line,
 				    char *format, va_list argp);
 extern esl_error_handler_f esl_error_handler;
