Dirichlet module finished.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@53 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -12,6 +12,7 @@ RANLIB  = @RANLIB@
 HEADERS = \
 	easel.h\
 	esl_alphabet.h\
+	esl_dirichlet.h\
 	esl_fileparser.h\
 	esl_getopts.h\
 	esl_keyhash.h\
@@ -26,6 +27,7 @@ HEADERS = \
 OBJS    = \
 	easel.o\
 	esl_alphabet.o\
+	esl_dirichlet.o\
 	esl_fileparser.o\
 	esl_getopts.o\
 	esl_keyhash.o\
