fixed bug w/ missing keyhash module: can't augment with a module that isn't there yet, duh.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@56 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/easel.h.in
+++ b/easel.h.in
@@ -33,7 +33,7 @@
 
 #undef eslAUGMENT_ALPHABET
 #undef eslAUGMENT_FILEPARSER
-#undef eslAUGMENT_KEYHASH	
+/* #undef eslAUGMENT_KEYHASH  */ /* not yet! no keyhash module yet. */
 #undef eslAUGMENT_MSA		
 #undef eslAUGMENT_RANDOM
 
