Default configure now produces library version; to get standalone modules, ./configure --enable-modular.
Incorp'ed esl_minimizer module. Still needs .tex file though.  EVD
fitting is on its way.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@57 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -16,6 +16,7 @@ HEADERS = \
 	esl_fileparser.h\
 	esl_getopts.h\
 	esl_keyhash.h\
+	esl_minimizer.h\
 	esl_msa.h\
 	esl_random.h\
 	esl_regexp.h\
@@ -31,6 +32,7 @@ OBJS    = \
 	esl_fileparser.o\
 	esl_getopts.o\
 	esl_keyhash.o\
+	esl_minimizer.o\
 	esl_msa.o\
 	esl_random.o\
 	esl_regexp.o\
