--- a/easel.h.in
+++ b/easel.h.in
@@ -33,7 +33,9 @@
 
 #undef eslAUGMENT_ALPHABET
 #undef eslAUGMENT_FILEPARSER
+#undef eslAUGMENT_GUMBEL
 /* #undef eslAUGMENT_KEYHASH  */ /* not yet! no keyhash module yet. */
+#undef eslAUGMENT_MINIMIZER
 #undef eslAUGMENT_MSA		
 #undef eslAUGMENT_RANDOM
 
@@ -91,9 +93,7 @@
 
 /* Debugging hooks, w/ three levels (1-3).
  */
-#ifndef eslDEBUGLEVEL
-#define eslDEBUGLEVEL 0
-#endif
+#undef eslDEBUGLEVEL
 
 #if (eslDEBUGLEVEL >= 1)
 #define ESL_DPRINTF1(x)  printf x
@@ -176,6 +176,13 @@ extern int  esl_FileEnvOpen(char *fname, char *env,
 #endif
 #ifndef FALSE
 #define FALSE 0
+#endif
+
+#ifndef MIN
+#define MIN(a,b)         (((a)<(b))?(a):(b))
+#endif
+#ifndef MAX
+#define MAX(a,b)         (((a)>(b))?(a):(b))
 #endif
 
 /* Some basic constants.
