Added the stats module, relocated some code into it. Documentation of gev, gumbel still in progress. Working on getting goodness-of-fit tests in histogram module.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@61 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -25,6 +25,7 @@ HEADERS = \
 	esl_regexp.h\
 	esl_sqio.h\
 	esl_stack.h\
+	esl_stats.h\
 	esl_vectorops.h\
 	esl_wuss.h
 
@@ -44,6 +45,7 @@ OBJS    = \
 	esl_regexp.o\
 	esl_sqio.o\
 	esl_stack.o\
+	esl_stats.o\
 	esl_vectorops.o\
 	esl_wuss.o
 
