Seven new stats modules now have consistent APIs. esl_stretchexp added. formats (from quite some time ago) committed.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@66 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -29,6 +29,7 @@ HEADERS = \
 	esl_sqio.h\
 	esl_stack.h\
 	esl_stats.h\
+	esl_stretchexp.h\
 	esl_vectorops.h\
 	esl_weibull.h\
 	esl_wuss.h
@@ -53,6 +54,7 @@ OBJS    = \
 	esl_sqio.o\
 	esl_stack.o\
 	esl_stats.o\
+	esl_stretchexp.o\
 	esl_vectorops.o\
 	esl_weibull.o\
 	esl_wuss.o
