--- a/configure.ac
+++ b/configure.ac
@@ -86,6 +86,7 @@ AC_ARG_ENABLE(modular,
     AC_DEFINE(eslAUGMENT_FILEPARSER)
     AC_DEFINE(eslAUGMENT_GEV)
     AC_DEFINE(eslAUGMENT_GUMBEL)
+    AC_DEFINE(eslAUGMENT_HISTOGRAM)
     AC_DEFINE(eslAUGMENT_KEYHASH)
     AC_DEFINE(eslAUGMENT_MINIMIZER)
     AC_DEFINE(eslAUGMENT_MSA)
