Oi. Working on 'goodness', the program to test all the fat-tailed distributions on forward scores.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@67 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/easel.h.in
+++ b/easel.h.in
@@ -13,7 +13,6 @@
 #include <stdio.h>		/* for FILE */
 #include <stdarg.h>		/* for va_list */
 
-
 /*****************************************************************
  * Available augmentations.
  * 
@@ -96,6 +95,10 @@
 /* Debugging hooks, w/ three levels (1-3).
  */
 #undef eslDEBUGLEVEL
+
+#if eslDEBUGLEVEL >= 1		/* for ESL_DASSERT() macros */
+#include <assert.h>
+#endif
 
 #if (eslDEBUGLEVEL >= 1)
 #define ESL_DPRINTF1(x)  printf x
