Added esl_gamma module, for gamma densities.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@76 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -15,6 +15,7 @@ HEADERS = \
 	esl_dirichlet.h\
 	esl_exponential.h\
 	esl_fileparser.h\
+	esl_gamma.h\
 	esl_getopts.h\
 	esl_gev.h\
 	esl_gumbel.h\
@@ -40,6 +41,7 @@ OBJS    = \
 	esl_dirichlet.o\
 	esl_exponential.o\
 	esl_fileparser.o\
+	esl_gamma.o\
 	esl_getopts.o\
 	esl_gev.o\
 	esl_gumbel.o\
