Portability improvements, in response to Zasha compiling on a non-POSIX system. esl_strcasecmp added as a portable drop-in for strcasecmp. esl_INFINITY revised to 1/0, because setting it by overflow doesn't work w/ a Microsoft compiler.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@80 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -3,8 +3,7 @@
 # SVN $Id$
 
 CC      = @CC@
-#CFLAGS  = @CFLAGS@
-CFLAGS  = -g -Wall  # for now, while debugging/developing
+CFLAGS  = @CFLAGS@
 AR      = @AR@ rcv
 LN      = ln
 RANLIB  = @RANLIB@
