Working on histogram documentation, and improving/simplifying the API.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@86 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -11,6 +11,7 @@ APITEX =  easel\
 	  esl_getopts\
 	  esl_gev\
 	  esl_gumbel\
+	  esl_histogram\
 	  esl_hyperexp\
 	  esl_keyhash\
 #	  esl_mixdchlet\
@@ -37,6 +38,7 @@ AUTOTEX = esl_alphabet\
 	  esl_getopts\
 	  esl_gev\
 	  esl_gumbel\
+	  esl_histogram\
 	  esl_hyperexp\
 	  esl_keyhash\
 	  esl_mixgev\
