Added esl-histplot miniapp, with man page. Changed other miniapp names to start with esl- prefix.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@89 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -19,8 +19,9 @@ ESLINCDIR = -I..
 
 ## list of the miniapps to compile.
 #
-PROGS = compstruct\
-	sreformat
+PROGS = esl-compstruct\
+	esl-histplot\
+	esl-reformat
 
 ## Targets defining how to make miniapp executables.
 #
